<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.uber</groupId>
	<artifactId>uber-system</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>uber-system</name>
	<description>uber打车系统</description>

	<!-- io.spring.platform -->
	<parent>
		<groupId>io.spring.platform</groupId>
		<artifactId>platform-bom</artifactId>
		<version>Brussels-SR5</version>
	</parent>

	<properties>
		<!--<start-class>com.roncoo.recharge.Application</start-class>-->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
	</properties>


	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.uber</groupId>
				<artifactId>uber-util</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.uber</groupId>
				<artifactId>uber-common</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<!-- roncoo -->
			<dependency>
				<groupId>com.roncoo</groupId>
				<artifactId>roncoo-spring-boot-starter-druid</artifactId>
				<version>1.0.5</version>
			</dependency>
			<dependency>
				<groupId>com.roncoo</groupId>
				<artifactId>roncoo-spring-boot-starter-shiro</artifactId>
				<version>1.0.5</version>
			</dependency>
			<dependency>
				<groupId>com.roncoo</groupId>
				<artifactId>shiro-freemarker-tags</artifactId>
				<version>1.0.0</version>
			</dependency>

			<dependency>
				<groupId>com.belerweb</groupId>
				<artifactId>pinyin4j</artifactId>
				<version>2.5.1</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>18.0</version>
			</dependency>

			<dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.7.2</version>
            </dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>1.2.15</version>
			</dependency>
			<!--<dependency>-->
				<!--<groupId>org.apache.httpcomponents</groupId>-->
				<!--<artifactId>httpcore</artifactId>-->
				<!--<version>4.4.3</version>-->
			<!--</dependency>-->
			<!--<dependency>-->
				<!--<groupId>org.apache.httpcomponents</groupId>-->
				<!--<artifactId>httpclient</artifactId>-->
				<!--<version>4.5.1</version>-->
			<!--</dependency>-->
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-util</artifactId>
				<version>9.3.7.v20160115</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>


			<!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>4.1.19</version>
			</dependency>


			<!-- mybatis -->
			<dependency>
				<groupId>org.mybatis.spring.boot</groupId>
				<artifactId>mybatis-spring-boot-starter</artifactId>
				<version>1.3.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>3.3</version>
			</dependency>
			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch</artifactId>
				<version>0.1.49</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.baidu.aip/java-sdk -->
			<dependency>
				<groupId>com.baidu.aip</groupId>
				<artifactId>java-sdk</artifactId>
				<version>4.5.0</version>
			</dependency>


		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
	</dependencies>

	<modules>
		<module>uber-util</module>
		<module>uber-api</module>
		<module>uber-common</module>
		<module>uber-web</module>
	</modules>

	<profiles>
        <profile>
            <id>local</id>
            <properties>
                <env>local</env>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <env>test</env>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <env>prod</env>
            </properties>
        </profile>
    </profiles>

</project>
